--- a/TxTLauncher_alt/app/src/main/res/values/strings.xml
+++ b/TxTLauncher_alt/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="button_reset">Reset to default</string>
     <string name="settings_read_applist">App list re-read when changed it</string>
     <string name="help_title">Help</string>
-    <string name="title_favorite_addapp">Add app to favorites</string>
+    <string name="title_favorite_addapp">Select favorite apps</string>
     <string name="title_home_addapp">Add app to home screen</string>
     <string name="favorite_apps">Favorite apps</string>
     <string name="button_help">Help</string>
@@ -42,12 +42,12 @@
     <string name="error_bitmap">Error in background image</string>
     <string name="background_file_not_found">Background image file not found</string>
     <string name="button_close_help">Ok</string>
-    <string name="help_text_1">Help 1 # 11</string>
-    <string name="help_text_2">Help 2 # 2</string>
-    <string name="help_text_3">Help 3 # 3</string>
-    <string name="help_text_4">Help 4 # 4</string>
+    <string name="help_text_1">Home scree: # - up swipe: app list # - down swipe: favorite apps # - double click: lock device # - right, left swipe: discover</string>
+    <string name="help_text_2">Settings: # - select app to home screen # - select apps to favorites # - show icons to system apps # - show icons to home screen apps</string>
+    <string name="help_text_3">- private AI link # - internet search link # - background image file name in download directory # - weather link (@CITY@ = city)</string>
     <string name="licence">GPLv3</string>
     <string name="note_title">Note</string>
     <string name="widgat_map">Go to map</string>
     <string name="start_ai">Start privat AI</string>
+    <string name="help_text_4">\"Made for me.\"</string>
 </resources>
