--- a/TxTLauncher/app/src/main/res/values-hu/strings.xml
+++ b/TxTLauncher/app/src/main/res/values-hu/strings.xml
@@ -59,4 +59,5 @@
     <string name="help_text_3">Új verzió letölthető a weboldalról.</string>
     <string name="button_help">Leírás</string>
     <string name="button_settings">Beállítások</string>
+    <string name="weather_title">Időjárás (város)</string>
 </resources>
