--- a/TxTLauncher/app/src/main/res/values/strings.xml
+++ b/TxTLauncher/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="licence">GPLv3</string>
     <string name="button_help">Help</string>
     <string name="button_settings">Settings</string>
+    <string name="weather_title">Weather (city)</string>
 
 </resources>
