--- a/TxTLauncher-2/app/src/main/res/values-hu/strings.xml
+++ b/TxTLauncher-2/app/src/main/res/values-hu/strings.xml
@@ -52,8 +52,8 @@
     <string name="help_title">Leírás</string>
     <string name="news_firstrun_title">Első indítás</string>
     <string name="news_firstrun">Előkészítés # Beállítások mentése</string>
-    <string name="help_text_1">"Használat: ## Jobbra húzás: eszközök # Balra húzás: felfedezés # Fel húzás: applikációk listája # Lefelé húzás: kedvencek # Dupla érintés: zárolás # Hosszú érintés: kedvencek "</string>
-    <string name="help_text_2">Beállítások: ## - fő képenyőre appok választása # - appok választása a kedvencek közé # - ikonok megjelenítésének bekapcsolása # - AI link beállítása (Eszközök lap) # - web kereső lbeállítása (a link végére kerül a keresett kifejezés) # - háttérkép (a Letöltések mappából) # - időjárás web linkj (a város neve a  @CITY@ helyére kerül) # - visszaállítás alapértékekre # - appikációk újraolvasása (változás esetén)</string>
+    <string name="help_text_1">Használat: ## a csempék segítségével indíthatók a funkciók.</string>
+    <string name="help_text_2">Beállítások: ## - fő képenyőre appok választása # - appok választása a kedvencek közé # - ikonok megjelenítésének bekapcsolása # - AI link beállítása (Eszközök lap) # - web kereső lbeállítása (a link végére kerül a keresett kifejezés) # - háttérkép (a Letöltések mappából) # - visszaállítás alapértékekre # - appikációk újraolvasása (változás esetén)</string>
     <string name="help_text_4">Licenc: GPLv3</string>
     <string name="licence">GPLv3</string>
     <string name="help_text_3">Új verzió letölthető a weboldalról.</string>
