--- a/TxTLauncher_alt/app/src/main/res/values-hu/strings.xml
+++ b/TxTLauncher_alt/app/src/main/res/values-hu/strings.xml
@@ -45,7 +45,7 @@
     <string name="button_close_help">Vissza</string>
     <string name="help_text_1">Kezdőképernyő: # - felfelé húzás: app lista # - lefelé húzás: kedvencek # jobbra vagy balra húzás: felfedezés # - két koppintás: zárolás</string>
     <string name="help_text_2">Beállítások: # - app hozzáadása a kezdőlépernyőhöz # - app hozzáadása a kedvencek közé # - ikonok rajzolása a rendszeralkalmazásokhoz # - ikonok a kezdpképernyős alkalmazásoknál</string>
-    <string name="help_text_3">Privát MI URL: # - MI-t használó weboldal URL-je # - internetes kereső szolgáltatlás URL-je # - háttérkép neve a letöltések mappájában # - időjárás URL-je, @CITY@ helyére a település neve kerül</string>
+    <string name="help_text_3">Privát MI URL: # - MI-t használó weboldal URL-je # - internetes kereső szolgáltatlás URL-je # - háttérkép neve a letöltések mappájában</string>
     <string name="help_text_4">\"Magamnak készült.\"</string>
     <string name="licence">GPLv3</string>
     <string name="note_title">Jegyzet</string>
