--- a/TxTLauncher/app/src/main/res/values/strings.xml
+++ b/TxTLauncher/app/src/main/res/values/strings.xml
@@ -60,5 +60,11 @@
     <string name="button_help">Help</string>
     <string name="button_settings">Settings</string>
     <string name="weather_title">Weather (city)</string>
+    <string name="button_weather">Weather</string>
+    <string name="search_weather">weather</string>
+    <string name="button_map">Open map app</string>
+    <string name="button_ai">Private AI</string>
+    <string name="button_discovery">Discovery</string>
+    <string name="button_lock">Lock screen</string>
 
 </resources>
